--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-body {
-	padding-top: 10px;
-}
-
 #urlInput {
 	margin-bottom: 10px;
 }
@@ -9,4 +5,12 @@ body {
 #spinner {
 	position: relative;
 	height: 50px;
+}
+
+#resultHeader {
+	visibility: hidden;
+	display: none;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 10px;
 }
